hphp/hack/test/typecheck/func_ptr_in_constants/custom_function.php.exp
File "custom_function.php", line 6, characters 24-28:
Expected constant expression for initializer (Parsing[1002])
File "custom_function.php", line 10, characters 21-25:
Expected constant expression for initializer (Parsing[1002])
File "custom_function.php", line 10, characters 21-25:
Illegal constant value (Naming[2023])
File "custom_function.php", line 6, characters 24-28:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "custom_function.php", line 6, characters 24-28:
  From this declaration, the context of this function body provides the capability set {}
  File "custom_function.php", line 3, characters 10-12:
  But the function being called requires the default capability set {AccessGlobals, Output, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
